--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 header {
-    background-color: hsl(38, 90%, 50%);
+    background-color: hsl(38, 70%, 80%);
     max-width: 50vw;
+    padding: 3em;
+}
+
+button {
+    background: #000;
+    color: #fff;
+    border: none;
+    padding: 1em;
 }
