--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,13 @@ body {
 
 header {
     background-color: hsl(200, 30%, 85%);
+    text-align: center;
+}
+
+header button {
+    border: none;
+    background-color: #000;
+    color: #fff;
+    padding: 1em;
+    border-radius: 0.25em;
 }
