--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ nav {
     display: flex;
     justify-content: space-between;
     padding: 1em;
+    position: sticky;
+    top: 0;
 }
 
 nav ul {
