hover effect to header button

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ header button {
     border-radius: 0.25em;
     margin: 1.5em;
     cursor: pointer;
+    transition: 200ms ease-in-out;
+}
+
+header button:hover {
+    transform: scale(1.1);
 }
 
 header h1 {
